# audioPro-cli

./: .gitignore  Cargo.toml  README.md  speaker.example.json
.github/workflows/: publish.yml
src/: api.rs  commands.rs  config.rs  constants.rs  lib.rs  main.rs  utils.rs
tests/: constants_test.rs  utils_test.rs
